[tool.poetry]
name = "mongo-bank"
version = "0.1.0"
description = ""
authors = ["Aviad Rozenhek <aviadr1@gmail.com>"]
readme = "README.md"
packages = [{include = "mongo_bank"}]

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

